last minute stuff before my computer yeets me

--- a/Color Palettes/contrast.css
+++ b/Color Palettes/contrast.css
@@ -74,3 +74,10 @@ QPushButton:hover{
     color: black;
 }
 
+/* TIME SENSITIVE INFO WIDGET */
+#timeSensitiveInfoWidget QLabel{
+    color: white;
+    padding: 5px;
+    font-size: 16px;
+}
+
