--- a/Color Palettes/contrast.css
+++ b/Color Palettes/contrast.css
@@ -1,10 +1,3 @@
-
-/* GENERAL APPLICATION */
-QMainWindow{
-    background-color: black;
-    color: white;
-}
-
 QWidget{
     background-color: black;
     color: white;
@@ -41,17 +34,12 @@ QComboBox{
     border: white;
 }
 
-/* EDIT PERSONAL GAME LIST WINDOW */
-
-#editPersonalGamesListWindow{
-    background-color: black;
-}
-
-/* TABLE WIDGET */
 #tableWidget QTableWidget{
  background-color: black;
  margin: 5px
 }
+
+/* Table Widget */
 
 #tableWidget QTableWidget::item{
     color: white;
@@ -83,6 +71,12 @@ QComboBox{
     font-size: 17px;
 }
 
+/* EDIT PERSONAL GAME LIST WINDOW */
+
+#editPersonalGamesListWindow{
+    background-color: black;
+}
+
 /* EDIT GAMES LIST WINDOW */
 #editGameListWindow{
     background-color: black;
@@ -112,4 +106,10 @@ QComboBox{
     color: white;
     padding: 5px;
     font-size: 16px;
+}
+
+/* EDIT PERSONAL GAMES LIST */
+
+#editPersonalGamesListInfo{
+background: black;
 }
