--- a/Color Palettes/sunset.css
+++ b/Color Palettes/sunset.css
@@ -41,6 +41,10 @@ QComboBox{
     border: white;
 }
 
+QScrollBar{
+    background-color: #ce6a85;
+    border: 1px solid #985277;
+}
 /* EDIT PERSONAL GAME LIST WINDOW */
 
 #editPersonalGamesListWindow{
@@ -51,7 +55,7 @@ QComboBox{
 #tableWidget QTableWidget{
  background-color: #ff8c61;
  margin: 5px;
- border-color: #985277;
+ border: 1px solid #985277;
 }
 
 #tableWidget QTableWidget::item{
@@ -74,9 +78,8 @@ QComboBox{
 }
 
 #tableWidget QScrollBar{
-    background: black;
     background-color: #ce6a85;
-    border: 1px solid light-grey;
+    border: 1px solid #985277;
 }
 #pointInfoWidget QLabel{
     color:  #5c374c;
@@ -104,9 +107,8 @@ QComboBox{
 }
 
 #editGameListWindow QScrollBar{
-    background: black;
-    background-color: grey;
-    border: 1px solid light-grey;
+    background-color: #ce6a85;
+    border: 1px solid #985277;
 }
 
 /* TIME SENSITIVE INFO WIDGET */
